Practica4/generated/y.output
State 144 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: header_program block

    2 $@1: %empty

    3 block: start_block $@1 local_var_dec sub_progs sentences end_block

    4 sub_progs: sub_progs sub_prog
    5          | %empty

    6 $@2: %empty

    7 sub_prog: header_subprogram $@2 block

    8 $@3: %empty

    9 $@4: %empty

   10 local_var_dec: START_VAR_DEC $@3 local_var $@4 END_VAR_DEC
   11              | %empty

   12 header_program: type MAIN PL PR

   13 start_block: BEGIN_P

   14 end_block: END

   15 local_var: local_var var_body
   16          | var_body

   17 $@5: %empty

   18 var_body: type $@5 list_id SEMICOLON
   19         | error

   20 list_id: list_id COMMA ID
   21        | ID
   22        | error

   23 $@6: %empty

   24 header_subprogram: type ID PL $@6 parameters PR
   25                  | type ID PL PR

   26 parameters: parameters COMMA type ID
   27           | type ID
   28           | error

   29 sentences: sentences sentence
   30          | sentence

   31 sentence: block
   32         | sentence_assign
   33         | sentence_if_then_else
   34         | sentence_while
   35         | sentence_input
   36         | sentence_output
   37         | sentence_return
   38         | sentence_do_until
   39         | sentence_list_forward_back
   40         | sentence_list_start_cursor
   41         | error

   42 sentence_assign: ID ASSIGN expr SEMICOLON

   43 sentence_if_then_else: IF PL expr PR sentence
   44                      | IF PL expr PR sentence ELSE sentence

   45 sentence_while: WHILE PL expr PR sentence

   46 sentence_input: INPUT CAD COMMA list_id SEMICOLON
   47               | INPUT list_id SEMICOLON

   48 sentence_output: OUTPUT list_expr_cad SEMICOLON

   49 sentence_return: RETURN expr SEMICOLON

   50 sentence_do_until: DO sentence UNTIL PL expr PR SEMICOLON

   51 sentence_list_forward_back: expr OP_LIST SEMICOLON

   52 sentence_list_start_cursor: OP_LIST_START_CURSOR expr SEMICOLON

   53 expr: PL expr PR
   54     | ID
   55     | const
   56     | function_call
   57     | OP_UNIT expr
   58     | expr OP_BIN expr
   59     | error

   60 $@7: %empty

   61 function_call: ID PL $@7 list_expr PR

   62 $@8: %empty

   63 function_call: ID PL $@8 PR

   64 list_expr: list_expr COMMA expr
   65          | expr

   66 type: TYPE
   67     | LIST TYPE

   68 const: INT
   69      | FLOAT
   70      | CHAR
   71      | BOOL
   72      | const_list

   73 const_list: list_of_int
   74           | list_of_float
   75           | list_of_char
   76           | list_of_bool

   77 list_of_int: BEGIN_LIST list_int END_LIST

   78 list_int: list_int COMMA INT
   79         | INT

   80 list_of_float: BEGIN_LIST list_float END_LIST

   81 list_float: list_float COMMA FLOAT
   82           | FLOAT

   83 list_of_char: BEGIN_LIST list_char END_LIST

   84 list_char: list_char COMMA CHAR
   85          | CHAR

   86 list_of_bool: BEGIN_LIST list_bool END_LIST

   87 list_bool: list_bool COMMA BOOL
   88          | BOOL

   89 list_expr_cad: list_expr_cad COMMA expr_cad
   90              | expr_cad

   91 expr_cad: expr
   92         | CAD


Terminals, with rules where they appear

$end (0) 0
error (256) 19 22 28 41 59
MAIN (258) 12
IF (259) 43 44
ELSE (260) 44
DO (261) 50
UNTIL (262) 50
OP_BIN (263) 58
OP_LIST (264) 51
OP_LIST_START_CURSOR (265) 52
OP_UNIT (266) 57
TYPE (267) 66 67
BEGIN_LIST (268) 77 80 83 86
END_LIST (269) 77 80 83 86
ASSIGN (270) 42
PL (271) 12 24 25 43 44 45 50 53 61 63
PR (272) 12 24 25 43 44 45 50 53 61 63
BEGIN_P (273) 13
END (274) 14
COMMA (275) 20 26 46 64 78 81 84 87 89
SEMICOLON (276) 18 42 46 47 48 49 50 51 52
INPUT (277) 46 47
OUTPUT (278) 48
START_VAR_DEC (279) 10
END_VAR_DEC (280) 10
LIST (281) 67
ID (282) 20 21 24 25 26 27 42 54 61 63
RETURN (283) 49
WHILE (284) 45
BOOL (285) 71 87 88
INT (286) 68 78 79
FLOAT (287) 69 81 82
CHAR (288) 70 84 85
CAD (289) 46 92


Nonterminals, with rules where they appear

$accept (35)
    on left: 0
program (36)
    on left: 1, on right: 0
block (37)
    on left: 3, on right: 1 7 31
$@1 (38)
    on left: 2, on right: 3
sub_progs (39)
    on left: 4 5, on right: 3 4
sub_prog (40)
    on left: 7, on right: 4
$@2 (41)
    on left: 6, on right: 7
local_var_dec (42)
    on left: 10 11, on right: 3
$@3 (43)
    on left: 8, on right: 10
$@4 (44)
    on left: 9, on right: 10
header_program (45)
    on left: 12, on right: 1
start_block (46)
    on left: 13, on right: 3
end_block (47)
    on left: 14, on right: 3
local_var (48)
    on left: 15 16, on right: 10 15
var_body (49)
    on left: 18 19, on right: 15 16
$@5 (50)
    on left: 17, on right: 18
list_id (51)
    on left: 20 21 22, on right: 18 20 46 47
header_subprogram (52)
    on left: 24 25, on right: 7
$@6 (53)
    on left: 23, on right: 24
parameters (54)
    on left: 26 27 28, on right: 24 26
sentences (55)
    on left: 29 30, on right: 3 29
sentence (56)
    on left: 31 32 33 34 35 36 37 38 39 40 41, on right: 29 30 43 44
    45 50
sentence_assign (57)
    on left: 42, on right: 32
sentence_if_then_else (58)
    on left: 43 44, on right: 33
sentence_while (59)
    on left: 45, on right: 34
sentence_input (60)
    on left: 46 47, on right: 35
sentence_output (61)
    on left: 48, on right: 36
sentence_return (62)
    on left: 49, on right: 37
sentence_do_until (63)
    on left: 50, on right: 38
sentence_list_forward_back (64)
    on left: 51, on right: 39
sentence_list_start_cursor (65)
    on left: 52, on right: 40
expr (66)
    on left: 53 54 55 56 57 58 59, on right: 42 43 44 45 49 50 51 52
    53 57 58 64 65 91
function_call (67)
    on left: 61 63, on right: 56
$@7 (68)
    on left: 60, on right: 61
$@8 (69)
    on left: 62, on right: 63
list_expr (70)
    on left: 64 65, on right: 61 64
type (71)
    on left: 66 67, on right: 12 18 24 25 26 27
const (72)
    on left: 68 69 70 71 72, on right: 55
const_list (73)
    on left: 73 74 75 76, on right: 72
list_of_int (74)
    on left: 77, on right: 73
list_int (75)
    on left: 78 79, on right: 77 78
list_of_float (76)
    on left: 80, on right: 74
list_float (77)
    on left: 81 82, on right: 80 81
list_of_char (78)
    on left: 83, on right: 75
list_char (79)
    on left: 84 85, on right: 83 84
list_of_bool (80)
    on left: 86, on right: 76
list_bool (81)
    on left: 87 88, on right: 86 87
list_expr_cad (82)
    on left: 89 90, on right: 48 89
expr_cad (83)
    on left: 91 92, on right: 89 90


State 0

    0 $accept: . program $end

    TYPE  shift, and go to state 1
    LIST  shift, and go to state 2

    program         go to state 3
    header_program  go to state 4
    type            go to state 5


State 1

   66 type: TYPE .

    $default  reduce using rule 66 (type)


State 2

   67 type: LIST . TYPE

    TYPE  shift, and go to state 6


State 3

    0 $accept: program . $end

    $end  shift, and go to state 7


State 4

    1 program: header_program . block

    BEGIN_P  shift, and go to state 8

    block        go to state 9
    start_block  go to state 10


State 5

   12 header_program: type . MAIN PL PR

    MAIN  shift, and go to state 11


State 6

   67 type: LIST TYPE .

    $default  reduce using rule 67 (type)


State 7

    0 $accept: program $end .

    $default  accept


State 8

   13 start_block: BEGIN_P .

    $default  reduce using rule 13 (start_block)


State 9

    1 program: header_program block .

    $default  reduce using rule 1 (program)


State 10

    3 block: start_block . $@1 local_var_dec sub_progs sentences end_block

    $default  reduce using rule 2 ($@1)

    $@1  go to state 12


State 11

   12 header_program: type MAIN . PL PR

    PL  shift, and go to state 13


State 12

    3 block: start_block $@1 . local_var_dec sub_progs sentences end_block

    START_VAR_DEC  shift, and go to state 14

    $default  reduce using rule 11 (local_var_dec)

    local_var_dec  go to state 15


State 13

   12 header_program: type MAIN PL . PR

    PR  shift, and go to state 16


State 14

   10 local_var_dec: START_VAR_DEC . $@3 local_var $@4 END_VAR_DEC

    $default  reduce using rule 8 ($@3)

    $@3  go to state 17


State 15

    3 block: start_block $@1 local_var_dec . sub_progs sentences end_block

    $default  reduce using rule 5 (sub_progs)

    sub_progs  go to state 18


State 16

   12 header_program: type MAIN PL PR .

    $default  reduce using rule 12 (header_program)


State 17

   10 local_var_dec: START_VAR_DEC $@3 . local_var $@4 END_VAR_DEC

    error  shift, and go to state 19
    TYPE   shift, and go to state 1
    LIST   shift, and go to state 2

    local_var  go to state 20
    var_body   go to state 21
    type       go to state 22


State 18

    3 block: start_block $@1 local_var_dec sub_progs . sentences end_block
    4 sub_progs: sub_progs . sub_prog

    error                 shift, and go to state 23
    IF                    shift, and go to state 24
    DO                    shift, and go to state 25
    OP_LIST_START_CURSOR  shift, and go to state 26
    OP_UNIT               shift, and go to state 27
    TYPE                  shift, and go to state 1
    BEGIN_LIST            shift, and go to state 28
    PL                    shift, and go to state 29
    BEGIN_P               shift, and go to state 8
    INPUT                 shift, and go to state 30
    OUTPUT                shift, and go to state 31
    LIST                  shift, and go to state 2
    ID                    shift, and go to state 32
    RETURN                shift, and go to state 33
    WHILE                 shift, and go to state 34
    BOOL                  shift, and go to state 35
    INT                   shift, and go to state 36
    FLOAT                 shift, and go to state 37
    CHAR                  shift, and go to state 38

    block                       go to state 39
    sub_prog                    go to state 40
    start_block                 go to state 10
    header_subprogram           go to state 41
    sentences                   go to state 42
    sentence                    go to state 43
    sentence_assign             go to state 44
    sentence_if_then_else       go to state 45
    sentence_while              go to state 46
    sentence_input              go to state 47
    sentence_output             go to state 48
    sentence_return             go to state 49
    sentence_do_until           go to state 50
    sentence_list_forward_back  go to state 51
    sentence_list_start_cursor  go to state 52
    expr                        go to state 53
    function_call               go to state 54
    type                        go to state 55
    const                       go to state 56
    const_list                  go to state 57
    list_of_int                 go to state 58
    list_of_float               go to state 59
    list_of_char                go to state 60
    list_of_bool                go to state 61


State 19

   19 var_body: error .

    $default  reduce using rule 19 (var_body)


State 20

   10 local_var_dec: START_VAR_DEC $@3 local_var . $@4 END_VAR_DEC
   15 local_var: local_var . var_body

    error  shift, and go to state 19
    TYPE   shift, and go to state 1
    LIST   shift, and go to state 2

    END_VAR_DEC  reduce using rule 9 ($@4)

    $@4       go to state 62
    var_body  go to state 63
    type      go to state 22


State 21

   16 local_var: var_body .

    $default  reduce using rule 16 (local_var)


State 22

   18 var_body: type . $@5 list_id SEMICOLON

    $default  reduce using rule 17 ($@5)

    $@5  go to state 64


State 23

   41 sentence: error .
   59 expr: error .

    OP_BIN    reduce using rule 59 (expr)
    OP_LIST   reduce using rule 59 (expr)
    $default  reduce using rule 41 (sentence)


State 24

   43 sentence_if_then_else: IF . PL expr PR sentence
   44                      | IF . PL expr PR sentence ELSE sentence

    PL  shift, and go to state 65


State 25

   50 sentence_do_until: DO . sentence UNTIL PL expr PR SEMICOLON

    error                 shift, and go to state 23
    IF                    shift, and go to state 24
    DO                    shift, and go to state 25
    OP_LIST_START_CURSOR  shift, and go to state 26
    OP_UNIT               shift, and go to state 27
    BEGIN_LIST            shift, and go to state 28
    PL                    shift, and go to state 29
    BEGIN_P               shift, and go to state 8
    INPUT                 shift, and go to state 30
    OUTPUT                shift, and go to state 31
    ID                    shift, and go to state 32
    RETURN                shift, and go to state 33
    WHILE                 shift, and go to state 34
    BOOL                  shift, and go to state 35
    INT                   shift, and go to state 36
    FLOAT                 shift, and go to state 37
    CHAR                  shift, and go to state 38

    block                       go to state 39
    start_block                 go to state 10
    sentence                    go to state 66
    sentence_assign             go to state 44
    sentence_if_then_else       go to state 45
    sentence_while              go to state 46
    sentence_input              go to state 47
    sentence_output             go to state 48
    sentence_return             go to state 49
    sentence_do_until           go to state 50
    sentence_list_forward_back  go to state 51
    sentence_list_start_cursor  go to state 52
    expr                        go to state 53
    function_call               go to state 54
    const                       go to state 56
    const_list                  go to state 57
    list_of_int                 go to state 58
    list_of_float               go to state 59
    list_of_char                go to state 60
    list_of_bool                go to state 61


State 26

   52 sentence_list_start_cursor: OP_LIST_START_CURSOR . expr SEMICOLON

    error       shift, and go to state 67
    OP_UNIT     shift, and go to state 27
    BEGIN_LIST  shift, and go to state 28
    PL          shift, and go to state 29
    ID          shift, and go to state 68
    BOOL        shift, and go to state 35
    INT         shift, and go to state 36
    FLOAT       shift, and go to state 37
    CHAR        shift, and go to state 38

    expr           go to state 69
    function_call  go to state 54
    const          go to state 56
    const_list     go to state 57
    list_of_int    go to state 58
    list_of_float  go to state 59
    list_of_char   go to state 60
    list_of_bool   go to state 61


State 27

   57 expr: OP_UNIT . expr

    error       shift, and go to state 67
    OP_UNIT     shift, and go to state 27
    BEGIN_LIST  shift, and go to state 28
    PL          shift, and go to state 29
    ID          shift, and go to state 68
    BOOL        shift, and go to state 35
    INT         shift, and go to state 36
    FLOAT       shift, and go to state 37
    CHAR        shift, and go to state 38

    expr           go to state 70
    function_call  go to state 54
    const          go to state 56
    const_list     go to state 57
    list_of_int    go to state 58
    list_of_float  go to state 59
    list_of_char   go to state 60
    list_of_bool   go to state 61


State 28

   77 list_of_int: BEGIN_LIST . list_int END_LIST
   80 list_of_float: BEGIN_LIST . list_float END_LIST
   83 list_of_char: BEGIN_LIST . list_char END_LIST
   86 list_of_bool: BEGIN_LIST . list_bool END_LIST

    BOOL   shift, and go to state 71
    INT    shift, and go to state 72
    FLOAT  shift, and go to state 73
    CHAR   shift, and go to state 74

    list_int    go to state 75
    list_float  go to state 76
    list_char   go to state 77
    list_bool   go to state 78


State 29

   53 expr: PL . expr PR
